Added new features

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <p>Real Time Net Worth as of 10/15/22 #1 in the world today</p>
 </center>
 
-<center><p>Elon Musk cofounded six companies including electric car maker Tesla, rocket producer SpaceX and tunneling startup Boring Company.</p>
+<center>
+  <p>Elon Musk cofounded six companies including electric car maker Tesla, rocket producer SpaceX and tunneling startup Boring Company.</p>
 <p>He owns about 25% of Tesla between stock and options, but has pledged more than half his stock as collateral for loans.</p>
 SpaceX, founded in 2002, is worth $127 billion after a funding round in May 2022; it quadrupled its value in three years.
 <p>Boring Company, which aims to defeat traffic, raised $675 million in April 2022 at a $5.7 billion valuation.</p>
@@ -24,16 +25,34 @@ SpaceX, founded in 2002, is worth $127 billion after a funding round in May 2022
 <p>In July 2022, Musk announced he was terminating the deal over bot concerns.
  Twitter sued and the parties will go to court in October.</p></center>
 
- <h4>Timeline of achievments</h4>
+ <h4 style="background-color:gray;">Timeline of achievments</h4>
  <ul>
-    <li>1995: Zip2</li>
-<li>1999: X.com. ...</li>
-<li>2000: PayPal. ...</li>
-<li>2002: SpaceX. ...</li>
-<li>2002: The Musk Foundation. ...</li>
-<li>2004: Tesla. ...</li>
-<li>2006: SolarCity. ...</li>
-<li>2015: OpenAI.</li>
+<li> <strong>June 28, 1971:</strong>  Born in Pretoria, South Africa</li><hr>
+<li><strong>1980:</strong>Parents Divorce</li><hr>
+<li><strong>1981:</strong>Interest in Computers</li><hr>
+<li><strong>1983:</strong>Sold his first video game, Blastar</li><hr>
+<li><strong>June 1989:</strong>Moved to Canada to attend Queen's University</li><hr>
+<li><strong>1992:</strong>Went to University of Pennsylvania to Study Business and Physics</li><hr>
+<li><strong>1995:</strong>Started Zip2, a Web Software Company</li><hr>
+<li><strong>February 1999:</strong> Sold Zip2 to Compaq for US$307 million</li><hr>
+<li><strong>March 1999:</strong>Cofounded X.com, a financial service and payment company</li><hr>
+<li><strong>2000:</strong> X.com merged with Confinity to form PayPal, Musk married his first wife</li><hr>
+<li><strong>October 2000:</strong> Musk got Fired from PayPal</li><hr>
+<li><strong>2001:</strong> Interest in Space Exploration</li><hr>
+<li><strong>February 2002:</strong> Got an idea to build affordable Rockets</li><hr>
+<li><strong>May 2002:</strong>Founded SpaceX, a space exploration company</li><hr>
+<li><strong>October 2002:</strong>eBay acquired PayPal</li><hr>
+<li><strong>July 2003:</strong> Tesla, Inc was incorporated</li><hr>
+<li><strong>February 2004:</strong> Musk joined Tesla</li><hr>
+<li><strong>2007:</strong> Musk became the CEO of Tesla</li><hr>
+<li><strong>May 25, 2012:</strong> SpaceX's vehicle docked with ISS for the first time</li><hr>
+<li><strong>June 2015:</strong> Announced Hyperloop design competition</li><hr>
+<li><strong>December 2015:</strong> Announced creation on OpenAi, Artificial Intelligence company</li><hr>
+<li><strong>2016:</strong> Dating, SolarCity Acquisition, Neuralink</li><hr>
+<li><strong>May 12, 2017:</strong> Hyperloop One announced first successful test run</li><hr>
+<li><strong>2018:</strong> Left the OpenAI board</li><hr>
+<li><strong>September 2018:</strong> Appeared puffing from a cannabis-laced cigarette</li><hr>
+<li><strong>2019:</strong>  Traveled to China for the groundbreaking of Tesla's Shanghai Gigafactory</li><hr>
 </ul>
 </body>
 </html>
