--- a/index.html
+++ b/index.html
@@ -56,4 +56,4 @@ SpaceX, founded in 2002, is worth $127 billion after a funding round in May 2022
 </ul>
 </body>
 </html>
-<a href="https://en.wikipedia.org/wiki/Elon_Muskref=">Read more</a>
+<a href="https://en.wikipedia.org/wiki/Elon_Musk>Read more</a>
