--- a/index.html
+++ b/index.html
@@ -56,4 +56,4 @@ SpaceX, founded in 2002, is worth $127 billion after a funding round in May 2022
 </ul>
 </body>
 </html>
-<button onclick="window.location.href='https://en.wikipedia.org/wiki/Elon_Musk';">Read Full profile</button>
+<button onclick="window.location.href='https://en.wikipedia.org/wiki/Elon_Musk';" title="wikipedia page">Read Full profile</button>
