--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ SpaceX, founded in 2002, is worth $127 billion after a funding round in May 2022
 <p>In July 2022, Musk announced he was terminating the deal over bot concerns.
  Twitter sued and the parties will go to court in October.</p></center>
 <div class="heading">
- <h4>Timeline of achievments</h4>
+ <center><h4>Timeline of achievments</h4></center>
  </div>
  <ul>
 <li> <strong>June 28, 1971:</strong>  Born in Pretoria, South Africa</li><hr>
