--- a/index.html
+++ b/index.html
@@ -2,17 +2,13 @@
 <html lang="en">
 <head>
 <style>
-.heading {
-  background-color:black;
-  color: white;
-  border: 2px solid black;
-  margin: 20px;
-  padding: 20px;
-}
+
 </style>
     <meta charset="UTF-8">
     <title>Elon Musk Tribute page</title>
     <center><h1>Elon Musk</h1></center>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
   <div class="heading">
@@ -67,4 +63,4 @@ SpaceX, founded in 2002, is worth $127 billion after a funding round in May 2022
 </ul>
 </body>
 </html>
-<button onclick="window.location.href='https://en.wikipedia.org/wiki/Elon_Musk';" title="wikipedia page">Read Full profile</button>
+<button  onclick="window.location.href='https://en.wikipedia.org/wiki/Elon_Musk';" title="wikipedia page">Read Full profile</button>
